--- a/initial.ipynb
+++ b/initial.ipynb
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -835,12 +835,13 @@
        " 'payment_type']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# list the current columns\n",
     "telco_df.columns.to_list()"
    ]
   },
