--- a/telco_churn_final.ipynb
+++ b/telco_churn_final.ipynb
@@ -31,7 +31,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Attempt to determine the driver for churn through modeling and create a csv file containing customer id's plus a prediction of that customer churning or not."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Executive Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following will show that certain features do correlate with churn and those features will be detailed below."
+   ]
   },
   {
    "cell_type": "code",
@@ -63,6 +79,13 @@
     "from env import host, username, password\n",
     "from prepare import prep_telco_data, telco_split\n",
     "from acquire import get_telco_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Acquire"
    ]
   },
   {
@@ -713,6 +736,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prepare the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -1089,6 +1119,13 @@
    "source": [
     "# Transpose again\n",
     "telco_df.head().T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Explore"
    ]
   },
   {
@@ -1738,6 +1775,13 @@
    "source": [
     "\n",
     "train.churn.value_counts(), train.churn.value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model and Evaluate"
    ]
   },
   {
@@ -3443,6 +3487,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deliver"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 105,
    "metadata": {},
@@ -3848,13 +3899,6 @@
    "source": [
     "csv_data.to_csv('telco_predictions_data.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
