--- a/telco_churn_final.ipynb
+++ b/telco_churn_final.ipynb
@@ -1806,25 +1806,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.9977139954279909"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree accuracy: 0.9977\n"
+     ]
     }
    ],
    "source": [
     "# See how Decision Tree stacks up without a MaxDepth\n",
     "dt1 = DecisionTreeClassifier(random_state=123)\n",
     "dt1.fit(X_train, y_train)\n",
-    "dt1.score(X_train,y_train)"
+    "dt1.score(X_train,y_train)\n",
+    "print('Decision Tree accuracy: %.4f' % dt1.score(X_train, y_train))"
    ]
   },
   {
@@ -1888,47 +1886,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.8161036322072645"
-      ]
-     },
-     "execution_count": 112,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree accuracy: 0.8161\n"
+     ]
     }
    ],
    "source": [
     "# The best MaxDepth from above turns out to be 6\n",
     "dt1 = DecisionTreeClassifier(max_depth=6, random_state=123)\n",
     "dt1.fit(X_train, y_train)\n",
-    "dt1.score(X_train,y_train)"
+    "print('Decision Tree accuracy: %.4f' % dt1.score(X_train, y_train))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.7874015748031497"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree accuracy: 0.7874\n"
+     ]
     }
    ],
    "source": [
     "dtvis = DecisionTreeClassifier(max_depth=3, random_state=123)\n",
     "dtvis.fit(X_train, y_train)\n",
-    "dtvis.score(X_train,y_train)"
+    "print('Decision Tree accuracy: %.4f' % dtvis.score(X_train, y_train))"
    ]
   },
   {
@@ -1993,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2003,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -2012,7 +2004,7 @@
        "LogisticRegression(max_iter=200)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2023,7 +2015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2032,7 +2024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -2040,12 +2032,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Accuracy of logit classifier on training set: 0.8034036068072136\n"
+      "Accuracy of logit classifier on training set: 0.8034\n"
      ]
     }
    ],
    "source": [
-    "print('\\nAccuracy of logit classifier on training set:',logit.score(X_train, y_train))"
+    "print('\\nAccuracy of logit classifier on training set: %.4f' %logit.score(X_train, y_train))"
    ]
   },
   {
@@ -2816,7 +2808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -2824,12 +2816,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Accuracy of knn classifier on training set: 0.8041656083312166\n"
+      "Accuracy of knn classifier on training set: 0.8042\n"
      ]
     }
    ],
    "source": [
-    "print('\\nAccuracy of knn classifier on training set:',knn.score(X_train, y_train))"
+    "print('\\nAccuracy of knn classifier on training set: %.4f' % knn.score(X_train, y_train))"
    ]
   },
   {
