--- a/telco_churn_final.ipynb
+++ b/telco_churn_final.ipynb
@@ -3939,6 +3939,32 @@
    "source": [
     "csv_data.to_csv('telco_predictions_data.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Takeaways\n",
+    "\n",
+    "Using top 6 variables by correlation created best fit models.\n",
+    "\n",
+    "All the models performed better than the baseline, however, the Logistic Regression model performed the best.\n",
+    "\n",
+    "## Recommendations\n",
+    "\n",
+    "Consider incentives for month-to-month customers to switch over to contracts.\n",
+    "\n",
+    "Consider incentives for senior citizens with a senior citizen discount.\n",
+    "\n",
+    "Consider a survey for those who have churned to determine reason for churn.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
