--- a/telco_churn_final.ipynb
+++ b/telco_churn_final.ipynb
@@ -3956,7 +3956,11 @@
     "\n",
     "Consider incentives for senior citizens with a senior citizen discount.\n",
     "\n",
-    "Consider a survey for those who have churned to determine reason for churn.\n"
+    "Consider a survey for those who have churned to determine reason for churn.\n",
+    "\n",
+    "## If I had more time\n",
+    "\n",
+    "I would explore more models using different hyperparamters to see if I could come up with a better model\n"
    ]
   },
   {
